# mimita-public

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build-and-run-better-v4.bat  build-and-run.sh
.cache/clangd/index/: _fixes.hpp.CDB68A2B5C20693F.idx  _vectorize.hpp.B898BD27697F3EB8.idx  camera.cpp.7A68E1E816BD4E32.idx  camera.h.4AA623CAC2240D39.idx  common.hpp.2478188C711E8DD3.idx  compute_common.hpp.AA657C530BFAE441.idx  compute_vector_relational.hpp.A0A8FEF99EA9A398.idx  config.h.53613AD464C1BB97.idx  constants.hpp.041F133E80BCF5E0.idx  constants.inl.B4C87D71FBD32418.idx  enemy.cpp.14F49BE0770A1105.idx  enemy.h.FF1035B14F40E216.idx  exponential.hpp.706439ABDD75AD9F.idx  func_common.inl.F4267E3FDA9FE815.idx  func_exponential.inl.6E5F585B9FA65DC6.idx  func_geometric.inl.A98070D0FEA83458.idx  func_integer.inl.262D136825896FCC.idx  func_matrix.inl.EA1DB4618A7FE97F.idx  func_packing.inl.E3DAB5E36498AD13.idx  func_trigonometric.inl.62A148EE748024F6.idx  func_vector_relational.inl.3D624895B3D41404.idx  fwd.hpp.312518E175B4C15F.idx  geometric.hpp.7302CBE8E2709A8A.idx  glad.c.CCC37B3F491180AE.idx  glad.h.6B0EE02DD229AD3D.idx  glfw3.h.8F47C38A762BFDAC.idx  glm.hpp.B536FB39E35C9691.idx  integer.hpp.1209D4C67917FA87.idx  khrplatform.h.72F2A98460B063BD.idx  main.cpp.634746D7C3480237.idx  map_common.h.4C0891CE97AF9CCF.idx  map_loader.cpp.E12C7880D602275B.idx  map_loader.h.06445C0F6C5421DB.idx  map_render.cpp.7DB622C47F063E80.idx  map_render.h.3A3A8311043BC849.idx  mat2x2.hpp.33495F2C3F7A1679.idx  mat2x3.hpp.521BBEE6C659A0F4.idx  mat2x4.hpp.D1D08C9AD6EB25C8.idx  mat3x2.hpp.8FEE6D8468923377.idx  mat3x3.hpp.EFB820D660CDB470.idx  (+138 more)
config/: physics.json  physics.json.bak
dev-scripts/: build-and-run-recursive-andlogging-v3.bat  build-and-run-v2.bat  build-and-run-v5.bat  build_and_run.bat
lib/: glad.lib  glew32.lib  glfw3dll.lib  glm.lib  lua51.lib  nanosvg.lib  nanosvgrast.lib  raylib.lib  vulkan-1.lib
lib/pkgconfig/: raylib.pc  vulkan.pc
src/: camera.h  main.cpp
src/debug/: debug-status.h
src/entities/: enemy.cpp  enemy.h  player.cpp  player.h
src/map/: map_common.h  map_loader.cpp  map_render.cpp  texture.cpp  texture_manager.cpp
src/physics/: collision-capsule-triangle.cpp  collision-capsule-triangle.h  config copy.h-dec162025.bak  config-loader.cpp  config-loader.h  config.h  config.h-notes.txt  physics-dec32025-v2.cpp.bak  physics-types.h  physics.cpp  physics.h
src/physics/archive/: collision-capsule-triangle copy.cpp-dec162025-2.bak  collision-capsule-triangle.cpp-dec162025.bak  physics copy.cpp-backupdec162025.bak  physics copy.cpp-dec162025-3.bak  physics-backupdec42025-v3.cpp.bak  physics-dec42025-v2.cpp.bak  physics.cpp-dec122025.bak
src/physics/old/: physics-dec42025.cpp.bak
src/renderer/: renderer.cpp  renderer.h
src/utils/: mesh_utils.h  path_utils.cpp  path_utils.h
src/weapons/: projectile.h  weapon.cpp  weapon.h
src/world/: readme-messimessimessi.txt  world-types.h  world.cpp  world.h
